Fix contact info overflow

--- a/src/components/react/directory/DirectoryList/DirectoryList.module.css
+++ b/src/components/react/directory/DirectoryList/DirectoryList.module.css
@@ -43,7 +43,7 @@
     }
 
     .metadata {
-      padding-block: var(--space-l);
+      padding-block: var(--space-l) var(--space-2xl);
     }
   }
 }
@@ -150,33 +150,49 @@
   }
 
   .contactInfo {
-    display: flex;
-    flex-direction: column;
-    gap: 0.1rem;
+    width: 100%;
     padding: 0;
     margin: 0;
-    font-size: var(--step--1);
+    font-size: var(--step-0);
     list-style-type: none;
 
     li {
-      display: flex;
+      display: grid;
+      grid-template-areas: "icon label";
+      grid-template-columns: 1.15rem 1fr;
       gap: var(--space-2xs);
-    }
+      max-width: 100%;
 
-    svg {
-      flex-shrink: 0;
-      width: 1rem;
-      height: 1rem;
-      margin-top: 0.25em;
-    }
+      >svg {
+        flex-shrink: 0;
+        grid-area: icon;
+        margin-top: 0.3em;
+      }
 
-    a {
-      color: var(--text-color);
-      text-decoration: none;
+      .contactLabel {
+        grid-area: label;
+        min-width: 0;
 
-      @media (hover: hover) {
-        &:hover {
-          text-decoration: underline;
+        >span,
+        >a {
+          display: block;
+          width: fit-content;
+          padding-block: 0.15em;
+        }
+
+        a {
+          max-width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          color: var(--text-color);
+          white-space: nowrap;
+          text-decoration: none;
+
+          @media (hover: hover) {
+            &:hover {
+              text-decoration: underline;
+            }
+          }
         }
       }
     }
